[package]
name = "eth-mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
ethers = {version = "2.0.7", features = ["ws"] }
futures = "0.3.28"
indicatif = "0.17.5"
neo4rs = "0.6.0"
serde = "1.0.164"
serde_json = "1.0.64"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.4", features = ["v4"] }
